corrected styling and html layout issues with navbar. Looks good at all screen sizes. Proceed with building next section

--- a/styles.css
+++ b/styles.css
@@ -5,17 +5,30 @@
 body {
     margin: 0;
     font-size: 10px;
+    line-height: 1.6;
+}
+
+/* The style for company logo and name section of navbar */
+.company-logo {
+  display: flex;
+  width: 180px;
+  height: 35px;
 }
 
 .bookmark {
-    width: 20%;
+  margin: auto 0;
+  width: 15%;
 }
 
+span {
+  margin: -5px 5px 0;
+  font-size: 28px;
+}
 
+/* style for navbar */
 .navbar {
   width: 100%;
   overflow: auto;
-  padding: 1.4rem;
 }
 
 .navbar a:hover {
@@ -23,8 +36,8 @@ body {
   color: black;
 }
 
-
-.navbar a {
+/* navbar links style */
+.navbar a:not(:last-child) {
     text-decoration: none;
     color: #333;
     display: block;
@@ -34,44 +47,46 @@ body {
     font-size: 1.4rem;
 }
 
-.navbar .btn {
-    padding: 0.9rem;
+/* button */
+.navbar a.btn {
+    padding: 14px 22.4px;
 }
 
-.navbar .button {
+.navbar a .button {
     background-color: red;
+    color: #FAFAFA;
     border-radius: 5px;
     padding: 8px 28px;
 }
 
+/* hamburger menu */
 .navbar .navbar__hamburger-menu {
     display: none;
 }
 
 
 @media screen and (max-width: 850px) {
-  .navbar a:not(:first-child) {display: none;}
-  .navbar a.navbar__hamburger-menu {
-    float: right;
-    display: block;
-  }
+    .navbar a:not(:first-child) {display: none;}
+    .navbar a.navbar__hamburger-menu {
+      float: right;
+      display: block;
+      position: absolute;
+      right: 2rem;
+      top: 2rem;
+    }
 
-}
+    .navbar.mobile {position: relative;}
 
-@media screen and (max-width: 850px) {
-  .navbar.mobile {position: relative;}
-  .navbar.mobile .navbar__hamburger-menu {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  .navbar.mobile a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
+    .navbar.mobile a {
+      float: none;
+      display: block;
+      text-align: left;
+    }
 
-  .navbar.mobile .bookmark {
-    width: 5%;
-}
+    .navbar.mobile a .button {
+      background-color: transparent;
+      border-radius: 5px;
+      padding: 0;
+    }
+
 }
